# concept-doc

./: .gitignore  CLAUDE.md  LICENSE  README.md  blog.md  project.ctx
examples/project-0/: .dockerignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  project.ctx  todo_app.py  todo_app.py.cdoc
examples/project-0/models/: todo_item.py  todo_item.py.aidoc  todo_item.py.cdoc
examples/project-0/services/: storage_service.py  storage_service.py.cdoc  storage_service.py.ctx  todo_service.py  todo_service.py.cdoc
examples/project-1/: CLAUDE.md  README.md  auth.py  auth.py.ctx  database.py  database.py.ctx  main.py  main.py.ctx  models.py  models.py.ctx  project.ctx
examples/project-2/: CLAUDE.md  README.md  coupon.py  coupon.py.ctx  project.ctx  store.py  store.py.ctx
examples/project-3/: CLAUDE.md  README.md  notification_service.py.ctx  project.ctx
hooks/: install.sh  pre-commit
prompts/: generate-tests.md  intent-first.md  review-tensions.md  sync-cdoc.md  sync-ctx.md
schema/: README.md  contextdoc.schema.json
tools/ctx-run/: README.md  ctx_run.py  ctx_run.py.ctx  pyproject.toml  requirements.txt
tools/ctx-run/tests/: conftest.py  test_cache.py  test_cli.py  test_file_discovery.py  test_parsing.py
tools/ctx-watch/: ctx_watch.py  ctx_watch.py.ctx  pyproject.toml  requirements.txt
tools/ctx-watch/tests/: conftest.py  test_cli.py  test_handler.py  test_helpers.py  test_tracker.py
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/src/: ctxRunner.ts  diagnostics.ts  extension.ts  llm.ts  runner.ts  setupWizard.ts  statusBar.ts  testResultsView.ts  watcher.ts
